<resources>
    <string name="app_name">Green Thumb</string>
    <string name="content_authority">com.google.firebase.udacity.greenthumb</string>
    <string name="plant_credits">Credits: %1$d</string>
    <plurals name="number_of_credits">
        
        <item quantity="one">%d credit</item>
        <item quantity="other">%d credits</item>
    </plurals>
    <string name="shopping_cart_title">Shopping Cart</string>
    <string name="shopping_cart_item_added">Added to shopping cart</string>
    <string name="shopping_cart_empty">Your cart is empty</string>
    <string name="shopping_cart_checkout">Checkout</string>
    <string name="shopping_cart_total">Total Credits: %1$d</string>
    <string name="shopping_cart_quantity_label">Qty</string>
    <string name="chevron_left">\u2039</string>
    <string name="chevron_right">\u203A</string>
    <string name="checkout_progress">Pretending to check out cart…</string>
    <string name="checkout_complete">Your pretend order has been placed! Have a real nice day!</string>
    <string name="purchases_title">Purchases</string>
    <string name="purchase_empty">No plants purchased yet</string>
    <string name="about_title">About</string>
    <string name="about_info_icons">Icons are provided by material.io/icons under the Apache License Version 2.0.</string>
    <string name="about_info_course">This is the course app used in the How Does Your App Grow? Udacity course by Google.</string>
    <string name="about_info_plant_descriptions">Plant descriptions are from Plants For a Future (http://www.pfaf.org/) and used under the Creative Commons Attribution 3.0 License.</string>
    <string name="shopping_cart_remove_description">Remove from cart</string>
    <string name="menu_profile">My Profile</string>
    <string name="gardening_experience_title">My Profile - How Often Do I Garden?</string>
    <string name="button_gardening_experience_save">Save</string>
    <string name="button_gardening_experience_cancel">Not now</string>
    <string-array name="plant_names">
        <item>Fennel</item>
        <item>Asparagus</item>
        <item>Carrot</item>
        <item>Cucumber</item>
        <item>Potato</item>
        <item>Mint</item>
        <item>Beet</item>
        <item>Bok choy</item>
        <item>Snap peas</item>
    </string-array>
    <string-array name="plant_descriptions">
        
        <item>Life Cycle: Perennial\r\nFull Size: 1.5 m (5ft) by 1 m (3ft 3in)\r\nHardiness: zone (UK) 5\r\nFlowers: August to October\r\nSoil Type: light (sandy), medium (loamy), and heavy (clay). Prefers well-drained soil.\r\nSuitable pH: acid, neutral and basic (alkaline) soils\r\nSunlight: Full sun\r\nWatering: Dry or moist soil. Tolerates drought</item>
        
        <item>Life Cycle: Perennial\r\nFull Size: 1.5 m (5ft)\r\nHardiness: zone (UK) 8, frost tender\r\nFlowers: Aug to September\r\nSoil Type: light (sandy) and medium (loamy) soils. Prefers well-drained soil.\r\nSuitable pH: acid, neutral and basic (alkaline) soils\r\nSunlight: Full sun or semi-shade\r\nWatering: Dry or moist soil. Tolerates drought</item>
        
        <item>Life Cycle: Biennial\r\nFull Size: 1.2 m (4ft) by 0.3 m (1ft in)\r\nHardiness: zone (UK) 5. Not frost tender\r\nFlowers: Jun to August\r\nSoil Type: light (sandy), medium (loamy), and heavy (clay). Prefers well-drained soil.\r\nSuitable pH: acid, neutral and basic (alkaline) soils\r\nSunlight: Full sun\r\nWatering: Moist soil.</item>
        
        <item>Life Cycle: Annual\r\nFull Size: 2 m (6ft 7in)\r\nHardiness: zone (UK) 10. Frost tender\r\nFlowers: Jul to September\r\nSoil Type: light (sandy), medium (loamy), and heavy (clay). Prefers well-drained soil.\r\nSuitable pH: acid, neutral and basic (alkaline) soils\r\nSunlight: Full sun\r\nWatering: moist soil</item>
        
        <item>Life Cycle: Perennial\r\nFull Size: 3 m (9ft 10in) at a fast rate\r\nHardiness: zone (UK) 9. Is frost tender\r\nSoil Type: light (sandy) and medium (loamy). Prefers well-drained soil.\r\nSuitable pH: acid, neutral and basic (alkaline) soils\r\nSunlight: Full sun\r\nWatering: moist soil</item>
        
        <item>Life Cycle: Perennial\r\nHardiness: zone (UK) 6. Not frost tender\r\nFlowers: August to October\r\nSoil Type: light (sandy), medium (loamy), and heavy (clay).\r\nSuitable pH: acid, neutral and basic (alkaline) soils\r\nSunlight: Full sun or semi-shade\r\nWatering: moist soil</item>
        
        <item>Life Cycle: Biennial\r\nFull Size: 0.9 m (3ft)\r\nHardiness: zone (UK) 5. Not frost tender\r\nSoil Type: light (sandy), medium (loamy), and heavy (clay). Prefers well-drained soil.\r\nSuitable pH: acid, neutral and basic (alkaline) soils. can grow in very alkaline and saline soils.\r\nSunlight: Full sun\r\nWatering: moist soil</item>
        
        <item>Life Cycle: Biennial\r\nFull Size: 0.9 m (3ft)\r\nHardiness: zone (UK) 7. Not frost tender.\r\nFlowers: May to August\r\nSoil Type: light (sandy), medium (loamy), and heavy (clay). Prefers well-drained soil.\r\nSuitable pH: acid, neutral and basic</item>
        
        <item>Life Cycle: Annual\r\nFull Size: 2 m (6ft 7in)\r\nHardiness: Not frost tender.\r\nFlowers: May to September\r\nSoil Type: light (sandy) and medium (loamy). Prefers well-drained soil.\r\nSuitable pH: acid, neutral and basic (alkaline) soils\r\nSunlight: Full sun\r\nWatering: moist soil</item>
    </string-array>
    <string-array name="plant_descriptions_advanced">
        
        <item>Foeniculum vulgare is an evergreen perennial growing to 1.5 m (5ft) by 1 m (3ft 3in).\r\n\r\nIt is hardy to zone (UK) 5 and is not frost tender. It is in leaf 12-Jan It is in flower from Aug to October, and the seeds ripen from Sep to October. The flowers are hermaphrodite (have both male and female organs) and are pollinated by Insects. The plant is self-fertile.\r\n\r\nIt is noted for attracting wildlife.\r\n\r\nSuitable for: light (sandy), medium (loamy) and heavy (clay) soils and prefers well-drained soil. Suitable pH: acid, neutral and basic (alkaline) soils. It cannot grow in the shade. It prefers dry or moist soil and can tolerate drought. The plant can tolerates strong winds but not maritime exposure.</item>
        
        <item>Asparagus officinalis is a perennial growing to 1.5 m (5ft) by 0.8 m (2ft 7in).\r\n\r\nIt is hardy to zone (UK) 4 and is not frost tender. It is in flower in August, and the seeds ripen from Sep to October. The flowers are dioecious (individual flowers are either male or female, but only one sex is to be found on any one plant so both male and female plants must be grown if seed is required) and are pollinated by Bees. The plant is not self-fertile.\r\n\r\nIt is noted for attracting wildlife.\r\n\r\nSuitable for: light (sandy), medium (loamy) and heavy (clay) soils and prefers well-drained soil. Suitable pH: acid, neutral and basic (alkaline) soils and can grow in very acid, very alkaline and saline soils.\r\n\r\nIt can grow in semi-shade (light woodland) or no shade. It prefers moist soil. The plant can tolerate maritime exposure.</item>
        
        <item>Daucus carota sativus is a biennial growing to 1.2 m (4ft) by 0.3 m (1ft in).\r\n\r\nIt is hardy to zone (UK) 5 and is not frost tender. It is in flower from Jun to August, and the seeds ripen from Aug to September. The flowers are hermaphrodite (have both male and female organs) and are pollinated by Flies, beetles. The plant is self-fertile.\r\n\r\nSuitable for: light (sandy), medium (loamy) and heavy (clay) soils and prefers well-drained soil. Suitable pH: acid, neutral and basic (alkaline) soils. It cannot grow in the shade. It prefers moist soil. The plant can tolerates strong winds but not maritime exposure.</item>
        
        <item>Cucumis sativus is an annual climber growing to 2 m (6ft 7in).\r\n\r\nIt is hardy to zone (UK) 10 and is frost tender. It is in flower from Jul to September, and the seeds ripen from Aug to October. The flowers are monoecious (individual flowers are either male or female, but both sexes can be found on the same plant) and are pollinated by Insects. The plant is self-fertile.\r\n\r\nSuitable for: light (sandy), medium (loamy) and heavy (clay) soils and prefers well-drained soil. Suitable pH: acid, neutral and basic (alkaline) soils. It cannot grow in the shade. It prefers moist soil.</item>
        
        <item>Ipomoea batatas is a perennial climber growing to 3 m (9ft 10in) at a fast rate.\r\n\r\nIt is hardy to zone (UK) 9 and is frost tender. The flowers are hermaphrodite (have both male and female organs)Suitable for: light (sandy) and medium (loamy) soils and prefers well-drained soil. Suitable pH: acid and neutral soils. It cannot grow in the shade. It prefers moist soil.</item>
        
        <item>Mentha requienii is a perennial.\r\n\r\nIt is hardy to zone (UK) 6 and is not frost tender. It is in flower from Jul to August. The flowers are hermaphrodite (have both male and female organs) and are pollinated by Insects. It is noted for attracting wildlife.\r\n\r\nSuitable for: light (sandy), medium (loamy) and heavy (clay) soils and can grow in heavy clay soil. Suitable pH: acid, neutral and basic (alkaline) soils. It can grow in semi-shade (light woodland) or no shade. It prefers moist soil.</item>
        
        <item>Beta vulgaris cicla is a biennial growing to 0.9 m (3ft).\r\n\r\nIt is hardy to zone (UK) 5 and is not frost tender. The flowers are hermaphrodite (have both male and female organs) and are pollinated by Wind. Suitable for: light (sandy), medium (loamy) and heavy (clay) soils and prefers well-drained soil. Suitable pH: acid, neutral and basic (alkaline) soils and can grow in very alkaline and saline soils.\r\n\r\nIt cannot grow in the shade. It prefers moist soil.</item>
        
        <item>Brassica rapa chinensis is a biennial growing to 0.9 m (3ft).\r\n\r\nIt is hardy to zone (UK) 7 and is not frost tender. It is in flower from May to August.\r\n\r\nThe flowers are hermaphrodite (have both male and female organs) and are pollinated by Bees, self.\r\n\r\nThe plant is self-fertile. Suitable for: light (sandy), medium (loamy) and heavy (clay) soils and prefers well-drained soil. Suitable pH: acid, neutral and basic (alkaline) soils.\r\n\r\nIt can grow in semi-shade (light woodland) or no shade. It prefers moist soil.</item>
        
        <item>Pisum sativum is an annual growing to 2 m (6ft 7in).\r\n\r\nIt is not frost tender. It is in flower from May to September, and the seeds ripen from Jul to October. The flowers are hermaphrodite (have both male and female organs) and are pollinated by Self. Occasionally bees. The plant is self-fertile.\r\n\r\nIt can fix Nitrogen.\r\n\r\nSuitable for: light (sandy) and medium (loamy) soils and prefers well-drained soil. Suitable pH: neutral and basic (alkaline) soils. It cannot grow in the shade. It prefers moist soil.</item>
    </string-array>
    <string-array name="gardening_experience_rating_labels">
        <item>Never</item>
        <item>About Once a Year</item>
        <item>About Once a Month</item>
        <item>About Once a Week</item>
        <item>About Every Day</item>
    </string-array>
    <string translatable="false" name="user_property_key_gardening_experience">gardening_experience</string>
    <string-array translatable="false" name="user_property_values_gardening_experience">
        <item>level_1</item>  
        <item>level_2</item>  
        <item>level_3</item>  
        <item>level_4</item>  
        <item>level_5</item>  
    </string-array>
</resources>